--- a/HandsFree/App/src/main/res/layout/activity_main.xml
+++ b/HandsFree/App/src/main/res/layout/activity_main.xml
@@ -3,12 +3,12 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context="by.citech.MainActivity"
     tools:ignore="MergeRootFrame">
 
     <TextView
         android:id="@+id/stateText"
-        android:text="@string/hello_world"
+        android:text="hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
