--- a/App/src/main/res/layout/activity_main.xml
+++ b/App/src/main/res/layout/activity_main.xml
@@ -1,15 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="by.citech.MainActivity"
-    tools:ignore="MergeRootFrame">
+    android:orientation="vertical"
+    tools:context="by.citech.MainActivity">
 
-    <TextView
-        android:id="@+id/stateText"
-        android:text="hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btnNetwork"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_tiny"
+        android:layout_weight= "1"
+        android:onClick="btnNetwork"
+        android:text="Network"
+        android:textSize="36dp">
+    </Button>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btnBLE"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_tiny"
+        android:layout_weight="1"
+        android:onClick="btnBLE"
+        android:text="Bluetooth LE"
+        android:textSize="36dp">
+
+    </Button>
+
+
+</LinearLayout>
