upd serv and client
Added debug version for client and server activities.

--- a/App/src/main/res/layout/activity_client.xml
+++ b/App/src/main/res/layout/activity_client.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="websocketduplex.ClientActivity">
+    tools:context=".ClientActivity">
 
     <EditText
         android:id="@+id/editTextCltRemSrvAddr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="9dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="адрес сервера"
@@ -20,13 +19,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <EditText
         android:id="@+id/editTextCltRemSrvPort"
-        android:layout_width="107dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="порт сервера"
@@ -41,12 +38,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:onClick="connect"
         android:text="Connect"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp" />
 
     <Button
         android:id="@+id/btnCltDiscFromSrv"
@@ -54,36 +51,35 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
         android:onClick="disconnect"
         android:text="Disconnect"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <Button
         android:id="@+id/btnCltStreamOn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginRight="16dp"
         android:onClick="streamOn"
         android:text="Stream on"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/btnCltConnToSrv"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginEnd="15dp" />
 
     <Button
         android:id="@+id/btnCltStreamOff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
         android:onClick="streamOff"
         android:text="Stream Off"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/btnCltDiscFromSrv"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textViewCltStatus"
@@ -91,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:text="------------------"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextCltRemSrvAddr" />
 
@@ -100,6 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:text="------------------"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCltStatus" />
 
@@ -109,6 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:text="------------------"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCltFromSrvText" />
 
@@ -130,7 +129,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
-        android:hint="Введите сообщение..."
+        android:hint="Введите сообщение"
         android:inputType="text"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCltSendMsg"
