--- a/App/src/main/res/layout/activity_server.xml
+++ b/App/src/main/res/layout/activity_server.xml
@@ -6,44 +6,117 @@
     android:layout_height="match_parent"
     tools:context="by.citech.websocketduplex.ServerActivity">
 
+    <TextView
+        android:id="@+id/textViewSrvFromCltByte"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="------------------"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSrvFromCltText" />
+
+    <TextView
+        android:id="@+id/textViewSrvFromCltText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="------------------"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSrvStatus"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <Button
         android:id="@+id/btnSrvOn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Server on"
+        android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:onClick="onServer"
+        android:text="Server on"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btnSrvOff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Server off"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:onClick="offServer"
+        android:text="Server off"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
+        android:id="@+id/editTextSrvPort"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="порт"
         android:inputType="numberDecimal"
-        android:text="Name"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="153dp" />
+        android:textSize="14sp"
+        app:layout_constraintLeft_toRightOf="@+id/editTextSrvIp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewSrvStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="------------------"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextSrvIp" />
+
+    <EditText
+        android:id="@+id/editTextSrvIp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="none"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnSrvSendMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:onClick="sendMessage"
+        android:text="Send message"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSrvRedirectData" />
+
+    <EditText
+        android:id="@+id/editTextSrvToCltText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:ems="10"
+        android:hint="Введите сообщение"
+        android:inputType="textPersonName"
+        android:textSize="14sp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSrvSendMsg" />
+
+    <ToggleButton
+        android:id="@+id/btnSrvRedirectData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:checked="false"
+        android:text="Redirect data"
+        android:textOff="Redirect ON"
+        android:textOn="Redirect OFF"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSrvOn" />
 </android.support.constraint.ConstraintLayout>
