--- a/App/src/main/res/layout/activity_server.xml
+++ b/App/src/main/res/layout/activity_server.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="by.citech.websocketduplex.ServerActivity">
+    tools:context="by.citech.by.citech.ServerActivity">
 
     <TextView
         android:id="@+id/textViewSrvFromCltByte"
