--- a/App/src/main/res/layout/gatt_services_characteristics.xml
+++ b/App/src/main/res/layout/gatt_services_characteristics.xml
@@ -104,12 +104,31 @@
         android:layout_margin="10dp">
 
         <Button
-            android:id="@+id/btnCall"
+            android:id="@+id/btnCallOut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="@dimen/margin_small"
-            android:text="@string/label_button"
+            android:text="@string/label_buttonCallOut"
+            android:textSize="24sp"/>
+
+        <Space
+            android:layout_width="5dp"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+
+        <Button
+            android:id="@+id/btnCallIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="@dimen/margin_small"
+            android:text="@string/label_buttonCallIn"
             android:textSize="24sp"/>
 
         <Space
