--- a/App/src/main/res/layout/gatt_services_characteristics.xml
+++ b/App/src/main/res/layout/gatt_services_characteristics.xml
@@ -169,31 +169,35 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="15dp"
-            android:orientation="horizontal">
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <Button
-                android:id="@+id/btnCallOut"
+                android:id="@+id/btnGreen"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
-                android:text="@string/label_buttonCallOut"
-                android:textSize="24sp" />
-        </LinearLayout>
+                android:background="#006633"
+                android:text=""
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            <Space
+                android:layout_width="32dp"
+                android:layout_height="wrap_content" />
 
             <Button
-                android:id="@+id/btnCallIn"
+                android:id="@+id/btnRed"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
-                android:text="@string/label_buttonCallIn"
-                android:textSize="24sp" />
+                android:background="#CC0000"
+                android:text=""
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
