--- a/App/src/main/res/layout/gatt_services_characteristics.xml
+++ b/App/src/main/res/layout/gatt_services_characteristics.xml
@@ -105,7 +105,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <Button
-                    android:id="@+id/btn_clear_rem_addr"
+                    android:id="@+id/btnClearRemAddr"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="end|center_vertical"
@@ -150,7 +150,7 @@
                     android:textColor="@color/colorBlack" />
 
                 <Button
-                    android:id="@+id/btn_clear_rem_port"
+                    android:id="@+id/btnClearRemPort"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_gravity="end|center_vertical"
