--- a/App/src/main/res/layout/gatt_services_characteristics.xml
+++ b/App/src/main/res/layout/gatt_services_characteristics.xml
@@ -202,101 +202,101 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/ip_info_margin"
-            android:orientation="horizontal"
-            android:paddingTop="15dp">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="@dimen/ip_info_margin"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:paddingTop="15dp">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_device_address"
-                android:textSize="18sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/label_device_address"-->
+                <!--android:textSize="18sp" />-->
 
-            <Space
-                android:layout_width="@dimen/horisontal_space"
-                android:layout_height="wrap_content" />
+            <!--<Space-->
+                <!--android:layout_width="@dimen/horisontal_space"-->
+                <!--android:layout_height="wrap_content" />-->
 
-            <TextView
-                android:id="@+id/device_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp" />
-        </LinearLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/device_address"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textSize="18sp" />-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/ip_info_margin"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="@dimen/ip_info_margin"-->
+            <!--android:orientation="horizontal">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_state"
-                android:textSize="18sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/label_state"-->
+                <!--android:textSize="18sp" />-->
 
-            <Space
-                android:layout_width="@dimen/horisontal_space"
-                android:layout_height="wrap_content" />
+            <!--<Space-->
+                <!--android:layout_width="@dimen/horisontal_space"-->
+                <!--android:layout_height="wrap_content" />-->
 
-            <TextView
-                android:id="@+id/connection_state"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/disconnected"
-                android:textSize="18sp" />
-        </LinearLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/connection_state"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/disconnected"-->
+                <!--android:textSize="18sp" />-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/ip_info_margin"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="@dimen/ip_info_margin"-->
+            <!--android:orientation="horizontal">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_data"
-                android:textSize="18sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/label_data"-->
+                <!--android:textSize="18sp" />-->
 
-            <Space
-                android:layout_width="@dimen/horisontal_space"
-                android:layout_height="wrap_content" />
+            <!--<Space-->
+                <!--android:layout_width="@dimen/horisontal_space"-->
+                <!--android:layout_height="wrap_content" />-->
 
-            <TextView
-                android:id="@+id/data_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/no_data"
-                android:textSize="18sp" />
-        </LinearLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/data_value"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/no_data"-->
+                <!--android:textSize="18sp" />-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/ip_info_margin"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="@dimen/ip_info_margin"-->
+            <!--android:orientation="horizontal">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_wdata"
-                android:textSize="18sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/label_wdata"-->
+                <!--android:textSize="18sp" />-->
 
-            <Space
-                android:layout_width="@dimen/horisontal_space"
-                android:layout_height="wrap_content" />
+            <!--<Space-->
+                <!--android:layout_width="@dimen/horisontal_space"-->
+                <!--android:layout_height="wrap_content" />-->
 
-            <TextView
-                android:id="@+id/wdata_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/no_data"
-                android:textSize="18sp" />
-        </LinearLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/wdata_value"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/no_data"-->
+                <!--android:textSize="18sp" />-->
+        <!--</LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
