--- a/App/src/main/res/layout/gatt_services_characteristics.xml
+++ b/App/src/main/res/layout/gatt_services_characteristics.xml
@@ -1,17 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -202,130 +189,11 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="@dimen/ip_info_margin"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:paddingTop="15dp">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/label_device_address"-->
-                <!--android:textSize="18sp" />-->
-
-            <!--<Space-->
-                <!--android:layout_width="@dimen/horisontal_space"-->
-                <!--android:layout_height="wrap_content" />-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/device_address"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textSize="18sp" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="@dimen/ip_info_margin"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/label_state"-->
-                <!--android:textSize="18sp" />-->
-
-            <!--<Space-->
-                <!--android:layout_width="@dimen/horisontal_space"-->
-                <!--android:layout_height="wrap_content" />-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/connection_state"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/disconnected"-->
-                <!--android:textSize="18sp" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="@dimen/ip_info_margin"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/label_data"-->
-                <!--android:textSize="18sp" />-->
-
-            <!--<Space-->
-                <!--android:layout_width="@dimen/horisontal_space"-->
-                <!--android:layout_height="wrap_content" />-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/data_value"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/no_data"-->
-                <!--android:textSize="18sp" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="@dimen/ip_info_margin"-->
-            <!--android:orientation="horizontal">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/label_wdata"-->
-                <!--android:textSize="18sp" />-->
-
-            <!--<Space-->
-                <!--android:layout_width="@dimen/horisontal_space"-->
-                <!--android:layout_height="wrap_content" />-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/wdata_value"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/no_data"-->
-                <!--android:textSize="18sp" />-->
-        <!--</LinearLayout>-->
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="15dp">
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:orientation="horizontal">-->
-
-                <!--<ImageView-->
-                    <!--android:id="@+id/icon"-->
-                    <!--android:layout_width="70px"-->
-                    <!--android:layout_height="70px"-->
-                    <!--android:layout_marginLeft="4px"-->
-                    <!--android:layout_marginRight="10px"-->
-                    <!--android:layout_marginTop="4px"-->
-                    <!--android:src="@drawable/ic_launcher"></ImageView>-->
-
-                <!--<TextView-->
-                    <!--android:id="@+id/selHandsFree"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:gravity="center"-->
-                    <!--android:text="@string/label_garniture"-->
-                    <!--android:textSize="18sp" />-->
-            <!--</LinearLayout>-->
 
             <Space
                 android:layout_width="match_parent"
@@ -363,12 +231,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/label_list_devices"
+                android:background="#008080"
                 android:gravity="center"
+                android:text="@string/label_list_devices"
                 android:textAllCaps="true"
-                android:textSize="18dp"
                 android:textColor="@color/colorWhite"
-                android:background="#008080"/>
+                android:textSize="18dp" />
 
         </LinearLayout>
 
@@ -380,12 +248,9 @@
             <ListView
                 android:id="@+id/ListDevices"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </ListView>
+                android:layout_height="wrap_content"></ListView>
         </LinearLayout>
 
-
     </LinearLayout>
-
 
 </FrameLayout>
