--- a/App/src/main/res/layout/lineitem_device.xml
+++ b/App/src/main/res/layout/lineitem_device.xml
@@ -1,17 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,11 +9,11 @@
         android:id="@+id/frame"
         android:layout_width="70px"
         android:layout_height="70px"
+        android:layout_alignParentLeft="true"
+        android:layout_gravity="start"
         android:layout_marginLeft="4px"
         android:layout_marginRight="10px"
-        android:layout_marginTop="4px"
-        android:layout_gravity="start"
-        android:layout_alignParentLeft="true">
+        android:layout_marginTop="4px">
 
         <ImageView
             android:id="@+id/icon"
@@ -51,9 +39,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_toRightOf="@+id/frame">
+        android:layout_toRightOf="@+id/frame"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/device_name"
@@ -85,12 +73,11 @@
         android:id="@+id/iconcheck"
         android:layout_width="70px"
         android:layout_height="70px"
+        android:layout_alignParentRight="true"
         android:layout_marginLeft="4px"
         android:layout_marginRight="10px"
         android:layout_marginTop="4px"
         android:src="@drawable/check256x256"
-        android:visibility="gone"
-        android:layout_alignParentRight="true">
-    </ImageView>
+        android:visibility="gone"></ImageView>
 
 </RelativeLayout>
