--- a/App/src/main/res/layout/lineitem_device.xml
+++ b/App/src/main/res/layout/lineitem_device.xml
@@ -7,77 +7,87 @@
 
     <FrameLayout
         android:id="@+id/frame"
-        android:layout_width="70px"
-        android:layout_height="70px"
-        android:layout_alignParentLeft="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_gravity="start"
-        android:layout_marginLeft="4px"
-        android:layout_marginRight="10px"
-        android:layout_marginTop="4px">
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="4dp">
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="70px"
-            android:layout_height="70px"
-            android:layout_marginLeft="4px"
-            android:layout_marginRight="10px"
-            android:layout_marginTop="4px"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="4dp"
             android:src="@drawable/ic_launcher"
-            android:visibility="visible"></ImageView>
+            android:visibility="visible">
+        </ImageView>
 
         <ImageView
             android:id="@+id/iconhead"
-            android:layout_width="70px"
-            android:layout_height="70px"
-            android:layout_marginLeft="4px"
-            android:layout_marginRight="10px"
-            android:layout_marginTop="4px"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="4dp"
             android:src="@drawable/headsetblack"
-            android:visibility="gone"></ImageView>
+            android:visibility="gone">
+        </ImageView>
     </FrameLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_toRightOf="@+id/frame"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_toEndOf="@+id/frame"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/device_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp" />
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/device_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorBlack"
             android:textSize="10dp" />
 
-        <TextView
-            android:id="@+id/bluetooth_class"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10dp" />
+     <!--
+                    <TextView
+                        android:id="@+id/bluetooth_class"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="10dp" />
 
-        <TextView
-            android:id="@+id/device_rssi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10dp" />
+                    <TextView
+                        android:id="@+id/device_rssi"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="10dp" />
+
+        -->
 
     </LinearLayout>
 
+
+
     <ImageView
         android:id="@+id/iconcheck"
-        android:layout_width="70px"
-        android:layout_height="70px"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="4px"
-        android:layout_marginRight="10px"
-        android:layout_marginTop="4px"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="4dp"
         android:src="@drawable/check256x256"
-        android:visibility="gone"></ImageView>
+        android:visibility="gone">
+    </ImageView>
 
 </RelativeLayout>
