--- a/App/src/main/res/layout/view_contacts.xml
+++ b/App/src/main/res/layout/view_contacts.xml
@@ -6,6 +6,7 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
     android:visibility="visible">
 
@@ -20,7 +21,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="0dp"
             android:visibility="gone">
 
             <TextView
@@ -54,8 +55,9 @@
             android:layout_height="match_parent"
             android:hint="@string/hint_search"
             android:inputType="text"
+            android:textColor="@color/colorBlack"
             android:layout_alignParentStart="true"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <ImageButton
             android:id="@+id/btnClearContact"
@@ -78,7 +80,6 @@
     <RelativeLayout
         android:id="@+id/viewContactList"
         android:layout_width="match_parent"
-        android:background="@color/colorWhite"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
